--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.0.0",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -36,22 +38,20 @@
     "prettier": "^3.0.3",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.3.1",
+    "typescript": "^5.2.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@typescript-eslint/parser": "^6.7.2",
+    "@types/jsonwebtoken": "^9.0.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.3.1",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
-    "eslint-plugin-no-loops": "^0.3.0",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
