--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.3",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.0.0",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.0.3",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.4",
-    "@types/cors": "^2.8.14",
-    "@types/jsonwebtoken": "^9.0.3"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
