--- a/development.env
+++ b/development.env
@@ -10,4 +10,5 @@ PORT = 5000
 
 DATABASE_URL="postgresql://admin:admin@localhost:5432/testdb"
 
-JWT_SECRET = "ansdihasdhya8ywhedqwhnidh"
+JWT_ACCESS_SECRET = "ansdihasdhya8ywhedqwhnidh"
+JWT_REFRESH_SECRET = 'asdjnasiasdaisdpgfua0psudfajsdfliuh'
